<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/teal_700"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imagePiPaTi"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="top"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_ninjamain" />

    <TextView
        android:id="@+id/tvQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagePiPaTi"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        tools:text="SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS"/>

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvQuote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="16dp"
        android:background="#0000ff"
        android:text="@string/btn1_main"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnJugar"
        android:layout_centerHorizontal="true"
        android:background="#0000ff"
        android:text="@string/btn2_main"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnUbicacion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRanking"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#0000ff"
        android:text="@string/btn5_main"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAjustes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#0000ff"
        android:text="@string/btn4_main"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAjustes"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUbicacion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#0000ff"
        android:text="@string/btn3_main"
        android:textSize="25dp"
        android:textStyle="bold" />

</RelativeLayout>